--- a/uspage/navBar.html
+++ b/uspage/navBar.html
@@ -9,10 +9,47 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
-<body>
-    <nav class="navbar navbar-light bg-light">
-        <img src="https://logos.textgiraffe.com/logos/logo-name/Any-designstyle-i-love-m.png" width="100" height="50" alt="">
-        
+<body style="height: 400em;">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light h1">
+        <div class="container">
+            <a href="_block">
+                <img src="https://logos.textgiraffe.com/logos/logo-name/Any-designstyle-i-love-m.png" width="100"
+                    height="50" alt="">
+
+            </a>
+            <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarSan" class="btn navbar-toggler"
+                aria-controls="navbarSan" aria-expanded="true" aria-label="toggle navigation">
+                main
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSan">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">
+                            Menu
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">
+                            About
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">
+                            Work
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <form action="#" class="form d-flex">
+                <input type="text" class="form-control mx-1">
+                <button class="btn btn-outline-dark mx-1" type="button">button</button>
+            </form>
+        </div>
     </nav>
 
     <!-- bootstrap link js  -->
