--- a/index.html
+++ b/index.html
@@ -26,19 +26,28 @@
             <form action="#">
                 <b class="d-block ">Add Items</b>
                 <input type="text" class="ps-1 bodr" placeholder="screach">
-                <button class="btns pys-1 pxs-2">button</button>
+                <button id="clickbtn" class="btns pys-1 pxs-2">button</button>
             </form>
         </div>
         <div class=" mxs-2 pxs-2 pys-1 ">
             <b class="listup-text">Items</b>
-            <ul style="border:1.5px solid gray;" class="listiten">
-                <li class="pxs-1 pys-1" style="border-bottom:1px solid gray;">Item 2</li>
+            <button id="democlick" class="btns pys-1 pxs-2">Button click</button>
+            <span id="demo"></span>
+            <ul id="px1" style="border:1.5px solid gray;" class="listiten">
+                <li id="btncheck" class="pxs-1  pys-1" style="border-bottom:1px solid gray;">Item 2</li>
                 <li class="pxs-1 pys-1" style="border-bottom:1px solid gray;">Item 1</li>
                 <li class="pxs-1 pys-1" style="border-bottom:1px solid gray;">Item 3</li>
                 <li class="pxs-1 pys-1" style="border-bottom:1px solid gray;">Item 4</li>
                 <li class="pxs-1 pys-1">Item 5</li>
             </ul>
+            <form action="#">
+                <b class="d-block ">Add Items</b>
+                <input type="text" class="ps-1 bodr" placeholder="screach">
+                <button class="btns pys-1 pxs-2">button</button>
+            </form>
         </div>
+
+     
 
     </main>
     <script src="javascript/java.js"></script>
